[package]
    name = "pdf_forms2"
    version = "0.1.0"
    authors = ["Jake <jsandler18@gmail.com>", "Malte <voos.malte@gmail.com>", "Emulator000 <emulator@hotmail.it>", "Osiris <aleosiris.juarez@gmail.com>"]
    description = "A library for programatically filling out pdf forms"
    repository = "https://github.com/aleosiris/pdf_forms2"
    edition = "2018"
    readme = "README.md"
    keywords = ["pdf_form", "pdf", "form", "forms", "field"]
    license = "MIT"
    exclude = [
        ".idea",
    ]

[dependencies]
    bitflags = "^1.2"
    derive-error = "^0.0.4"
    lopdf = { version = "^0.26", features = ["embed_image"] }